--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,7 +14,7 @@ torchtyping = "^0.1.4"
 
 
 [tool.poetry.group.train.dependencies]
-peft = "^0.8.1"
+peft = "^0.8.2"
 datasets = "^2.16.1"
 accelerate = "^0.26.1"
 bitsandbytes = "^0.42.0"
@@ -22,6 +22,7 @@ pytorch-warmup = "^0.1.1"
 tqdm = "^4.66.1"
 humanize = "^4.9.0"
 einops = "^0.7.0"
+deepspeed = "^0.13.1"
 
 [build-system]
 requires = ["poetry-core"]
