--- a/environment.yml
+++ b/environment.yml
@@ -1,6 +1,9 @@
+name: bmx
+
 channels:
   - nvidia
   - pytorch
+  - huggingface
   - conda-forge
   # We want to have a reproducible setup, so we don't want default channels,
   # which may be different for different users. All required channels should
@@ -9,9 +12,16 @@ channels:
 
 dependencies:
   - python=3.11
+  - pytorch-cuda=12.1
+  - pytorch
+  - torchvision
+  - torchaudio
   - cudatoolkit
   - cudnn
   - mamba
+  - scipy
+  - transformers[torch]
+  - accelerate
   - numpy
   - pip  # pip must be mentioned explicitly, or conda-lock will fail
   - poetry=1.7.*  # or 1.1.*, or no version at all -- as you want
