--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -12,7 +12,7 @@
             "console": "integratedTerminal",
             "env": {
                 "PYTHONPATH": "${workspaceFolder}/models/pytorch",
-                "CUDA_LAUNCH_BLOCKING": "True",
+                "CUDA_LAUNCH_BLOCKING": "1",
             }
         }
     ]
