--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,7 +5,7 @@
     "version": "0.2.0",
     "configurations": [
         {
-            "name": "Python Debugger: Current File with Arguments",
+            "name": "Run GSM8K test",
             "type": "debugpy",
             "request": "launch",
             "program": "${workspaceFolder}/models/pytorch/eval_gsm8k.py",
