--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,37 @@
+annotated-types==0.6.0 ; python_version >= "3.11" and python_version < "4.0"
+appdirs==1.4.4 ; python_version >= "3.11" and python_version < "4.0"
 beartype==0.17.0 ; python_version >= "3.11" and python_version < "4.0"
-certifi==2023.11.17 ; python_version >= "3.11" and python_version < "4.0"
+cachecontrol[filecache]==0.14.0 ; python_version >= "3.11" and python_version < "4.0"
+cachy==0.3.0 ; python_version >= "3.11" and python_version < "4.0"
+certifi==2024.2.2 ; python_version >= "3.11" and python_version < "4.0"
+cffi==1.16.0 ; python_version >= "3.11" and python_version < "4.0" and sys_platform == "linux" and platform_python_implementation != "PyPy"
 charset-normalizer==3.3.2 ; python_version >= "3.11" and python_version < "4.0"
+click-default-group==1.2.4 ; python_version >= "3.11" and python_version < "4.0"
+click==8.1.7 ; python_version >= "3.11" and python_version < "4.0"
+clikit==0.6.2 ; python_version >= "3.11" and python_version < "4.0"
 colorama==0.4.6 ; python_version >= "3.11" and python_version < "4.0" and platform_system == "Windows"
+conda-lock==2.5.2 ; python_version >= "3.11" and python_version < "4.0"
+crashtest==0.3.1 ; python_version >= "3.11" and python_version < "4.0"
+cryptography==42.0.2 ; python_version >= "3.11" and python_version < "4.0" and sys_platform == "linux"
+distlib==0.3.8 ; python_version >= "3.11" and python_version < "4.0"
+docker==7.0.0 ; python_version >= "3.11" and python_version < "4.0"
+ensureconda==1.4.4 ; python_version >= "3.11" and python_version < "4.0"
 filelock==3.13.1 ; python_version >= "3.11" and python_version < "4.0"
 fsspec==2023.10.0 ; python_version >= "3.11" and python_version < "4.0"
+gitdb==4.0.11 ; python_version >= "3.11" and python_version < "4.0"
+gitpython==3.1.41 ; python_version >= "3.11" and python_version < "4.0"
+html5lib==1.1 ; python_version >= "3.11" and python_version < "4.0"
 huggingface-hub==0.20.3 ; python_version >= "3.11" and python_version < "4.0"
 idna==3.6 ; python_version >= "3.11" and python_version < "4.0"
+importlib-metadata==7.0.1 ; python_version >= "3.11" and python_version < "3.12"
+jaraco-classes==3.3.0 ; python_version >= "3.11" and python_version < "4.0"
+jeepney==0.8.0 ; python_version >= "3.11" and python_version < "4.0" and sys_platform == "linux"
 jinja2==3.1.3 ; python_version >= "3.11" and python_version < "4.0"
-markupsafe==2.1.4 ; python_version >= "3.11" and python_version < "4.0"
+keyring==24.3.0 ; python_version >= "3.11" and python_version < "4.0"
+markupsafe==2.1.5 ; python_version >= "3.11" and python_version < "4.0"
+more-itertools==10.2.0 ; python_version >= "3.11" and python_version < "4.0"
 mpmath==1.3.0 ; python_version >= "3.11" and python_version < "4.0"
+msgpack==1.0.7 ; python_version >= "3.11" and python_version < "4.0"
 networkx==3.2.1 ; python_version >= "3.11" and python_version < "4.0"
 numpy==1.26.3 ; python_version >= "3.11" and python_version < "4.0"
 nvidia-cublas-cu12==12.1.3.1 ; platform_system == "Linux" and platform_machine == "x86_64" and python_version >= "3.11" and python_version < "4.0"
@@ -24,17 +47,36 @@ nvidia-nccl-cu12==2.19.3 ; platform_system == "Linux" and platform_machine == "x
 nvidia-nvjitlink-cu12==12.3.101 ; platform_system == "Linux" and platform_machine == "x86_64" and python_version >= "3.11" and python_version < "4.0"
 nvidia-nvtx-cu12==12.1.105 ; platform_system == "Linux" and platform_machine == "x86_64" and python_version >= "3.11" and python_version < "4.0"
 packaging==23.2 ; python_version >= "3.11" and python_version < "4.0"
+pastel==0.2.1 ; python_version >= "3.11" and python_version < "4.0"
+pkginfo==1.9.6 ; python_version >= "3.11" and python_version < "4.0"
+platformdirs==4.2.0 ; python_version >= "3.11" and python_version < "4.0"
+pycparser==2.21 ; python_version >= "3.11" and python_version < "4.0" and sys_platform == "linux" and platform_python_implementation != "PyPy"
+pydantic-core==2.16.1 ; python_version >= "3.11" and python_version < "4.0"
+pydantic==2.6.0 ; python_version >= "3.11" and python_version < "4.0"
+pylev==1.4.0 ; python_version >= "3.11" and python_version < "4.0"
+pywin32-ctypes==0.2.2 ; python_version >= "3.11" and python_version < "4.0" and sys_platform == "win32"
+pywin32==306 ; python_version >= "3.11" and python_version < "4.0" and sys_platform == "win32"
 pyyaml==6.0.1 ; python_version >= "3.11" and python_version < "4.0"
 regex==2023.12.25 ; python_version >= "3.11" and python_version < "4.0"
 requests==2.31.0 ; python_version >= "3.11" and python_version < "4.0"
+ruamel-yaml-clib==0.2.8 ; platform_python_implementation == "CPython" and python_version < "3.13" and python_version >= "3.11"
+ruamel-yaml==0.18.5 ; python_version >= "3.11" and python_version < "4.0"
 safetensors==0.4.2 ; python_version >= "3.11" and python_version < "4.0"
+secretstorage==3.3.3 ; python_version >= "3.11" and python_version < "4.0" and sys_platform == "linux"
+six==1.16.0 ; python_version >= "3.11" and python_version < "4.0"
+smmap==5.0.1 ; python_version >= "3.11" and python_version < "4.0"
 sympy==1.12 ; python_version >= "3.11" and python_version < "4.0"
 tokenizers==0.15.1 ; python_version >= "3.11" and python_version < "4.0"
+tomlkit==0.12.3 ; python_version >= "3.11" and python_version < "4.0"
+toolz==0.12.1 ; python_version >= "3.11" and python_version < "4.0"
 torch==2.2.0 ; python_version >= "3.11" and python_version < "4.0"
 torchtyping==0.1.4 ; python_version >= "3.11" and python_version < "4.0"
 tqdm==4.66.1 ; python_version >= "3.11" and python_version < "4.0"
-transformers==4.37.1 ; python_version >= "3.11" and python_version < "4.0"
+transformers==4.37.2 ; python_version >= "3.11" and python_version < "4.0"
 triton==2.2.0 ; platform_system == "Linux" and platform_machine == "x86_64" and python_version >= "3.11" and python_version < "4.0"
 typeguard==4.1.5 ; python_version >= "3.11" and python_version < "4.0"
 typing-extensions==4.9.0 ; python_version >= "3.11" and python_version < "4.0"
-urllib3==2.1.0 ; python_version >= "3.11" and python_version < "4.0"
+urllib3==1.26.18 ; python_version >= "3.11" and python_version < "4.0"
+virtualenv==20.25.0 ; python_version >= "3.11" and python_version < "4.0"
+webencodings==0.5.1 ; python_version >= "3.11" and python_version < "4.0"
+zipp==3.17.0 ; python_version >= "3.11" and python_version < "3.12"
